--- a/templates/Job Status.html
+++ b/templates/Job Status.html
@@ -421,16 +421,7 @@
               </div>
             </form>
           </div>
-          <script>
-            document.getElementById('nav-button').addEventListener('click', 
-            function() {
-              document.querySelector('.contact-modal').style.display = 'flex';
-            });
-            document.querySelector('.close').addEventListener('click',
-            function() {
-            document.querySelector('.contact-modal').style.display = 'none';
-            });
-          </script>
+          <script src="/static/contact.js"></script>
         </div>
 
       </div>
